--- a/assignment-10-Animations(watch)/style.css
+++ b/assignment-10-Animations(watch)/style.css
@@ -14,7 +14,7 @@ body {
 .container {
   display: flex;
   width: 100vw;
-  justify-content: space-between;
+  justify-content: center;
 }
 .container img {
   width: 350px;
