--- a/weekly-test-5/style.css
+++ b/weekly-test-5/style.css
@@ -42,42 +42,57 @@
     justify-content: flex-end;
     align-items: center;
 }
-.container{
-    /* position: relative; */
-    display: flex;
-    flex-wrap: wrap;
+.hero{
+    display:flex;
+    flex-wrap: wrap; 
 }
-.container .photos{
-    overflow: hidden;
-    height: 90vh;
-    width: 50%;
-}
-.bg-image{
-    /* overflow: hidden; */
-    /* object-fit: cover; */
-    height: 100%;
-    width: 100%;
-    opacity: 0.5;
-    /* -webkit-transform: scale(1);
-	transform: scale(1);
-	-webkit-transition: .3s ease-in-out;
-	transition: .3s ease-in-out; */
-    /* transition-property: transform; */
-    transition-duration: 0.3s;
-    /* transition-timing-function: ease-in; */
+.image{
     
-}
-.container img:hover{
-    /* -webkit-transform: scale(1.3); */
-	transform: scale(1.3);
-    
-}
-/* .overlay-cont{
-    position: absolute;
-    transform: translate(50%, 50%);
-    z-index: 1000;
-} */
+position: relative;
+width: calc(100%/2);
+overflow: hidden;
 
+
+}
+.image>img{
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+    opacity: 0.5;
+    transition:transform .3s ease;
+   
+}
+
+.image-overlay{
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% ,-50%);
+    text-align: center;
+    
+   
+    
+}
+.image-overlay>img{
+  width: 100%;
+ max-width: 550px;
+  height: auto;
+  transition:transform .3s ease;
+  margin-bottom: 20px;
+  
+}
+.image-overlay p{
+    font-size: 1.1rem;
+    font-weight: 400;
+    color: black;
+   }
+
+.image:hover img{
+ transform: scale(1.1);
+
+} 
+/* --------black-bar----- */
 .black-bar{
     display: flex;
     justify-content: center;
